Add Okra's pages/sailing.html Add Okra's pages/sailing2.html Add util/noise.js

--- a/pages/sailing.html
+++ b/pages/sailing.html
@@ -34,7 +34,7 @@
 </head>
 <body>
 
-	<script src='util/noise.js'></script>
+	<script src='../util/noise.js'></script>
 
 	<script type="text/javascript">
         // KEYBOARD
@@ -77,7 +77,7 @@
         // crosshair
         var crosshairimg = new Image();
         crosshairimg.onload = ready;
-        crosshairimg.src = "assets/crosshair.png";
+        crosshairimg.src = "../assets/crosshair.png";
 
         function ready() {
             pctx.fillStyle = "#ff0000";
